--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,279 @@
+absl-py==0.10.0
+aiofiles==0.7.0
+alabaster==0.7.12
+altair==4.1.0
+appdirs==1.4.4
+argcomplete==1.10.0
+argon2-cffi==20.1.0
+asgiref==3.4.1
+astor==0.8.1
+astroid==2.4.1
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+Automat==20.2.0
+avro-python3==1.10.0
+Babel==2.8.0
+backcall==0.1.0
+base58==2.1.0
+black==19.10b0
+bleach==3.2.1
+blinker==1.4
+blis==0.4.1
+bokeh==2.2.1
+bs4==0.0.1
+cachetools==4.1.1
+catalogue==2.0.4
+certifi==2021.5.30
+cffi==1.14.5
+charset-normalizer==2.0.3
 click==6.7
-Flask==0.12.2
-tensorflow
-pandas
-sklearn
-matplotlib
-numpy==1.19.5
-keras_nightly==2.5.0.dev2021032900
+cloudpickle==1.6.0
+colorama==0.4.3
+constantly==15.1.0
+coverage==5.3
+coveralls==2.1.2
+cryptography==3.4.6
+cssselect==1.1.0
+cycler==0.10.0
+cymem==2.0.3
+Cython==0.29.21
+DateTime==4.3
+de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-2.1.0/de_core_news_sm-2.1.0.tar.gz
+decorator==4.4.2
+defusedxml==0.7.1
+distlib==0.3.1
+distro==1.5.0
+docopt==0.6.2
+docutils==0.16
+docx2txt==0.8
+EbookLib==0.17.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+entrypoints==0.3
+erlastic==2.0.0
+et-xmlfile==1.0.1
+extract-msg==0.23.1
 fastapi==0.67.0
-keras==2.4.3
+fastavro==1.0.0.post1
+filelock==3.0.12
+fire==0.1.2
+flake8==3.8.4
+Flask==0.12.2
+Flask-Sockets==0.2.1
+flatbuffers==1.12
+future==0.18.2
+gast==0.4.0
+gensim==4.0.1
+gevent==21.1.2
+gevent-websocket==0.10.1
+gitdb==4.0.7
+GitPython==3.1.19
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+GPUtil==1.4.0
+graphviz==0.16
+greenery==3.3.1
+greenlet==1.1.0
+grpcio==1.34.1
+gunicorn==20.1.0
+h11==0.12.0
+h5py==3.1.0
+huggingface-hub==0.0.8
+hyperlink==21.0.0
+hyperopt==0.2.5
+idna==3.2
+imageai==2.1.5
+imagesize==1.2.0
+IMAPClient==2.1.0
+incremental==21.3.0
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==4.3.21
+itemadapter==0.2.0
+itemloaders==1.0.4
+itsdangerous==2.0.1
+jdcal==1.4.1
+jedi==0.17.0
+Jinja2==2.11.2
+jmespath==0.10.0
+joblib==0.17.0
+jsonschema==3.2.0
+jsonsubschema==0.0.1
+jupyter-client==6.1.12
+jupyter-core==4.6.3
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kafka-python==2.0.2
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+keyring==21.4.0
+kiwisolver==1.3.1
+lale==0.4.14
+lazy-object-proxy==1.4.3
+lxml==4.6.2
+Markdown==3.3
+MarkupSafe==1.1.1
+mathparse==0.1.2
+matplotlib==3.4.2
+mccabe==0.6.1
+mistune==0.8.4
+mlxtend==0.17.3
+murmurhash==1.0.2
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5
+nose==1.3.7
+notebook==6.4.0
+numpy==1.19.5
+oauthlib==3.1.0
+olefile==0.46
+opencv-python==4.4.0.44
+openpyxl==3.0.5
+opt-einsum==3.3.0
+packaging==20.4
+pandas==1.3.0
+pandocfilters==1.4.3
+parsel==1.6.0
+parso==0.7.0
+pathspec==0.8.1
+pathy==0.5.2
+pdfminer==20191125
+pdfminer.six==20181108
+peewee==2.8.8
+petl==1.6.8
+pickleshare==0.7.5
 Pillow==8.3.1
-uvicorn
-aiofiles
-jinja2
-python-multipart
-tensorflow-cpu
+Pint==0.16.1
+pipfreeze==2.0.3
+pipreqs==0.4.10
+pkginfo==1.6.1
+plac==1.1.3
+preshed==3.0.2
+prometheus-client==0.11.0
+prompt-toolkit==3.0.5
+Protego==0.1.16
+protobuf==3.13.0
+py4j==0.10.9
+pyarrow==4.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.20
+pycryptodome==3.10.1
+pydantic==1.7.4
+pydeck==0.6.2
+PyDispatcher==2.0.5
+pydub==0.24.1
+pyflakes==2.2.0
+Pygments==2.6.1
+pyjokes==0.6.0
+pylint==2.5.2
+pymongo==3.11.0
+PyMySQL==0.10.1
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pypi==2.1
+pyrsistent==0.17.3
+PySocks==1.7.1
+pyspark==3.0.1
+python-dateutil==2.7.5
+python-intervals==1.10.0.post1
+python-multipart==0.0.5
+python-pptx==0.6.18
+pytz==2021.1
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==1.1.3
+PyYAML==3.13
+pyzmq==19.0.1
+queuelib==1.5.0
+readme-renderer==28.0
+redis==3.5.3
+regex==2020.10.28
+requests==2.26.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+rsa==4.6
+sacremoses==0.0.45
+scikit-learn==0.23.2
+scipy==1.5.2
+Scrapy==2.4.1
+seaborn==0.11.0
+Send2Trash==1.7.1
+sent2vec==0.2.0
+service-identity==18.1.0
+six==1.15.0
+sklearn==0.0
+smart-open==3.0.0
+smmap==4.0.0
+snowballstemmer==2.0.0
+sortedcontainers==2.4.0
+soupsieve==2.2.1
+spacy==3.0.6
+spacy-legacy==3.0.6
+Sphinx==4.0.2
+sphinx-rtd-theme==0.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+SQLAlchemy==1.2.19
+srsly==2.4.1
+starlette==0.14.2
+streamlit==0.85.0
+style==1.1.0
+tabula==1.0.5
+tabula-py==2.2.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.5.0
+tensorflow-cpu==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
+terminado==0.10.1
+testpath==0.5.0
+thinc==8.0.5
+threadpoolctl==2.1.0
+tika==1.24
+tokenizers==0.10.3
+toml==0.10.1
+toolz==0.11.1
+torch==1.9.0
+tornado==6.1
+tqdm==4.51.0
+traitlets==5.0.5
+transformers==4.7.0
+twine==3.2.0
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+typed-ast==1.4.2
+typer==0.3.2
+typing-extensions==3.7.4.3
+tzlocal==1.5.1
+update==0.0.1
+urllib3==1.26.6
+uvicorn==0.5.1
+validators==0.18.2
+wasabi==0.8.2
+watchdog==2.1.3
+wcwidth==0.1.9
+webencodings==0.5.1
+websockets==9.1
+Werkzeug==1.0.1
+wget==3.2
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+XlsxWriter==1.4.3
+yarg==0.1.9
+zope.event==4.5.0
+zope.interface==5.2.0
